<resources>
    <string name="app_name">IGmarketApp</string>
    <string name="uk">UK</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="company_logo">Company Logo</string>
    <string name="market_information">Market Information</string>
    <string name="bid">BID</string>
    <string name="offer">OFFER</string>
    <string name="nothing" />
    <string name="no_connection">No Internet connection</string>
    <string name="no_connect">No Internet Connection!</string>
    <string name="logo_string">Company Logo</string>
    <string name="ukLink">https://api.ig.com/deal/samples/markets/ANDROID_PHONE/en_GB/igi</string>
    <string name="deLink">https://api.ig.com/deal/samples/markets/ANDROID_PHONE/de_DE/dem</string>
    <string name="frLink">https://api.ig.com/deal/samples/markets/ANDROID_PHONE/fr_FR/frm</string>
</resources>
